javascripts = js/dojo/date.js \
	js/dojo/html.js \
	js/dojo/_firebug/tab_rgt_norm.png \
	js/dojo/_firebug/firebug.css \
	js/dojo/_firebug/tab_lft_norm.png \
	js/dojo/_firebug/warningIcon.png \
	js/dojo/_firebug/tab_lft_over.png \
	js/dojo/_firebug/errorIcon.png \
	js/dojo/_firebug/infoIcon.png \
	js/dojo/_firebug/tab_rgt_over.png \
	js/dojo/_firebug/LICENSE \
	js/dojo/_firebug/firebug.js \
	js/dojo/string.js \
	js/dojo/_base.js \
	js/dojo/robot.js \
	js/dojo/gears.js \
	js/dojo/vhffs-public.js \
	js/dojo/cldr/README \
	js/dojo/cldr/nls/sv/number.js \
	js/dojo/cldr/nls/sv/currency.js \
	js/dojo/cldr/nls/sv/gregorian.js \
	js/dojo/cldr/nls/zh-tw/currency.js \
	js/dojo/cldr/nls/zh-tw/gregorian.js \
	js/dojo/cldr/nls/cs/number.js \
	js/dojo/cldr/nls/cs/currency.js \
	js/dojo/cldr/nls/cs/gregorian.js \
	js/dojo/cldr/nls/zh/number.js \
	js/dojo/cldr/nls/zh/currency.js \
	js/dojo/cldr/nls/zh/gregorian.js \
	js/dojo/cldr/nls/ja/number.js \
	js/dojo/cldr/nls/ja/currency.js \
	js/dojo/cldr/nls/ja/gregorian.js \
	js/dojo/cldr/nls/he/number.js \
	js/dojo/cldr/nls/he/currency.js \
	js/dojo/cldr/nls/he/islamic.js \
	js/dojo/cldr/nls/he/hebrew.js \
	js/dojo/cldr/nls/he/gregorian.js \
	js/dojo/cldr/nls/it/number.js \
	js/dojo/cldr/nls/it/currency.js \
	js/dojo/cldr/nls/it/gregorian.js \
	js/dojo/cldr/nls/nb/number.js \
	js/dojo/cldr/nls/nb/currency.js \
	js/dojo/cldr/nls/nb/gregorian.js \
	js/dojo/cldr/nls/el/number.js \
	js/dojo/cldr/nls/el/currency.js \
	js/dojo/cldr/nls/el/gregorian.js \
	js/dojo/cldr/nls/nl/number.js \
	js/dojo/cldr/nls/nl/currency.js \
	js/dojo/cldr/nls/nl/gregorian.js \
	js/dojo/cldr/nls/number.js \
	js/dojo/cldr/nls/da/number.js \
	js/dojo/cldr/nls/da/currency.js \
	js/dojo/cldr/nls/da/gregorian.js \
	js/dojo/cldr/nls/sl/number.js \
	js/dojo/cldr/nls/sl/currency.js \
	js/dojo/cldr/nls/sl/gregorian.js \
	js/dojo/cldr/nls/currency.js \
	js/dojo/cldr/nls/ca/number.js \
	js/dojo/cldr/nls/ca/currency.js \
	js/dojo/cldr/nls/ca/gregorian.js \
	js/dojo/cldr/nls/de/number.js \
	js/dojo/cldr/nls/de/currency.js \
	js/dojo/cldr/nls/de/gregorian.js \
	js/dojo/cldr/nls/en-ca/currency.js \
	js/dojo/cldr/nls/en-ca/gregorian.js \
	js/dojo/cldr/nls/ar/number.js \
	js/dojo/cldr/nls/ar/currency.js \
	js/dojo/cldr/nls/ar/islamic.js \
	js/dojo/cldr/nls/ar/hebrew.js \
	js/dojo/cldr/nls/ar/gregorian.js \
	js/dojo/cldr/nls/ar/islamic-civil.js \
	js/dojo/cldr/nls/ru/number.js \
	js/dojo/cldr/nls/ru/currency.js \
	js/dojo/cldr/nls/ru/gregorian.js \
	js/dojo/cldr/nls/es/number.js \
	js/dojo/cldr/nls/es/currency.js \
	js/dojo/cldr/nls/es/gregorian.js \
	js/dojo/cldr/nls/islamic.js \
	js/dojo/cldr/nls/hebrew.js \
	js/dojo/cldr/nls/fr/number.js \
	js/dojo/cldr/nls/fr/currency.js \
	js/dojo/cldr/nls/fr/gregorian.js \
	js/dojo/cldr/nls/pt-pt/number.js \
	js/dojo/cldr/nls/pt-pt/gregorian.js \
	js/dojo/cldr/nls/buddhist.js \
	js/dojo/cldr/nls/ko/number.js \
	js/dojo/cldr/nls/ko/currency.js \
	js/dojo/cldr/nls/ko/gregorian.js \
	js/dojo/cldr/nls/sk/number.js \
	js/dojo/cldr/nls/sk/currency.js \
	js/dojo/cldr/nls/sk/gregorian.js \
	js/dojo/cldr/nls/en-au/number.js \
	js/dojo/cldr/nls/en-au/currency.js \
	js/dojo/cldr/nls/en-au/gregorian.js \
	js/dojo/cldr/nls/th/number.js \
	js/dojo/cldr/nls/th/currency.js \
	js/dojo/cldr/nls/th/buddhist.js \
	js/dojo/cldr/nls/th/gregorian.js \
	js/dojo/cldr/nls/hu/number.js \
	js/dojo/cldr/nls/hu/currency.js \
	js/dojo/cldr/nls/hu/gregorian.js \
	js/dojo/cldr/nls/tr/number.js \
	js/dojo/cldr/nls/tr/currency.js \
	js/dojo/cldr/nls/tr/gregorian.js \
	js/dojo/cldr/nls/en-gb/number.js \
	js/dojo/cldr/nls/en-gb/gregorian.js \
	js/dojo/cldr/nls/gregorian.js \
	js/dojo/cldr/nls/pl/number.js \
	js/dojo/cldr/nls/pl/currency.js \
	js/dojo/cldr/nls/pl/gregorian.js \
	js/dojo/cldr/nls/en/number.js \
	js/dojo/cldr/nls/en/currency.js \
	js/dojo/cldr/nls/en/gregorian.js \
	js/dojo/cldr/nls/pt/number.js \
	js/dojo/cldr/nls/pt/currency.js \
	js/dojo/cldr/nls/pt/gregorian.js \
	js/dojo/cldr/nls/fi/number.js \
	js/dojo/cldr/nls/fi/currency.js \
	js/dojo/cldr/nls/fi/gregorian.js \
	js/dojo/cldr/supplemental.js \
	js/dojo/cldr/monetary.js \
	js/dojo/cldr/LICENSE \
	js/dojo/resources/dnd.css \
	js/dojo/resources/blank.gif \
	js/dojo/resources/_modules.js \
	js/dojo/resources/images/dndCopy.png \
	js/dojo/resources/images/dndMove.png \
	js/dojo/resources/images/dndNoCopy.png \
	js/dojo/resources/images/dndNoMove.png \
	js/dojo/resources/blank.html \
	js/dojo/resources/iframe_history.html \
	js/dojo/resources/dojo.css \
	js/dojo/resources/LICENSE \
	js/dojo/colors.js \
	js/dojo/vhffs-public.js.uncompressed.js \
	js/dojo/cache.js \
	js/dojo/DeferredList.js \
	js/dojo/number.js \
	js/dojo/uacss.js \
	js/dojo/dojo.js.uncompressed.js \
	js/dojo/currency.js \
	js/dojo/NodeList-fx.js \
	js/dojo/fx/easing.js \
	js/dojo/fx/Toggler.js \
	js/dojo/cookie.js \
	js/dojo/window.js \
	js/dojo/nls/sv/colors.js \
	js/dojo/nls/zh-tw/colors.js \
	js/dojo/nls/cs/colors.js \
	js/dojo/nls/zh/colors.js \
	js/dojo/nls/ja/colors.js \
	js/dojo/nls/he/colors.js \
	js/dojo/nls/it/colors.js \
	js/dojo/nls/nb/colors.js \
	js/dojo/nls/el/colors.js \
	js/dojo/nls/colors.js \
	js/dojo/nls/nl/colors.js \
	js/dojo/nls/da/colors.js \
	js/dojo/nls/sl/colors.js \
	js/dojo/nls/ca/colors.js \
	js/dojo/nls/de/colors.js \
	js/dojo/nls/ar/colors.js \
	js/dojo/nls/ru/colors.js \
	js/dojo/nls/es/colors.js \
	js/dojo/nls/fr/colors.js \
	js/dojo/nls/pt-pt/colors.js \
	js/dojo/nls/ro/colors.js \
	js/dojo/nls/ko/colors.js \
	js/dojo/nls/sk/colors.js \
	js/dojo/nls/th/colors.js \
	js/dojo/nls/kk/colors.js \
	js/dojo/nls/hu/colors.js \
	js/dojo/nls/tr/colors.js \
	js/dojo/nls/pl/colors.js \
	js/dojo/nls/pt/colors.js \
	js/dojo/nls/fi/colors.js \
	js/dojo/AdapterRegistry.js \
	js/dojo/io/script.js \
	js/dojo/io/iframe.js \
	js/dojo/behavior.js \
	js/dojo/dojo.js \
	js/dojo/back.js \
	js/dojo/NodeList-html.js \
	js/dojo/OpenAjax.js \
	js/dojo/i18n.js \
	js/dojo/Stateful.js \
	js/dojo/build.txt \
	js/dojo/_base/html.js \
	js/dojo/_base/NodeList.js \
	js/dojo/_base/event.js \
	js/dojo/_base/browser.js \
	js/dojo/_base/xhr.js \
	js/dojo/_base/json.js \
	js/dojo/_base/array.js \
	js/dojo/_base/_loader/hostenv_rhino.js \
	js/dojo/_base/_loader/loader_debug.js \
	js/dojo/_base/_loader/loader_xd.js \
	js/dojo/_base/_loader/hostenv_browser.js \
	js/dojo/_base/_loader/hostenv_spidermonkey.js \
	js/dojo/_base/_loader/loader.js \
	js/dojo/_base/_loader/bootstrap.js \
	js/dojo/_base/_loader/hostenv_ff_ext.js \
	js/dojo/_base/window.js \
	js/dojo/_base/Deferred.js \
	js/dojo/_base/query.js \
	js/dojo/_base/fx.js \
	js/dojo/_base/declare.js \
	js/dojo/_base/Color.js \
	js/dojo/_base/query-sizzle.js \
	js/dojo/_base/lang.js \
	js/dojo/_base/connect.js \
	js/dojo/parser.js \
	js/dojo/hash.js \
	js/dojo/jaxer.js \
	js/dojo/fx.js \
	js/dojo/robotx.js \
	js/dojo/NodeList-traverse.js \
	js/dojo/dnd/Manager.js \
	js/dojo/dnd/move.js \
	js/dojo/dnd/common.js \
	js/dojo/dnd/Container.js \
	js/dojo/dnd/Avatar.js \
	js/dojo/dnd/Moveable.js \
	js/dojo/dnd/autoscroll.js \
	js/dojo/dnd/Mover.js \
	js/dojo/dnd/Source.js \
	js/dojo/dnd/Selector.js \
	js/dojo/dnd/TimedMoveable.js \
	js/dojo/regexp.js \
	js/dojo/date/stamp.js \
	js/dojo/date/locale.js \
	js/dojo/data/api/Read.js \
	js/dojo/data/api/Write.js \
	js/dojo/data/api/Request.js \
	js/dojo/data/api/Identity.js \
	js/dojo/data/api/Notification.js \
	js/dojo/data/util/simpleFetch.js \
	js/dojo/data/util/filter.js \
	js/dojo/data/util/sorter.js \
	js/dojo/data/ItemFileWriteStore.js \
	js/dojo/data/ItemFileReadStore.js \
	js/dojo/LICENSE \
	js/dojo/NodeList-manipulate.js \
	js/dojo/rpc/JsonService.js \
	js/dojo/rpc/RpcService.js \
	js/dojo/rpc/JsonpService.js \
	js/dijit/_CssStateMixin.js \
	js/dijit/_HasDropDown.js \
	js/dijit/DialogUnderlay.js \
	js/dijit/layout/_TabContainerBase.js \
	js/dijit/layout/TabController.js \
	js/dijit/layout/_LayoutWidget.js \
	js/dijit/layout/LayoutContainer.js \
	js/dijit/layout/TabContainer.js \
	js/dijit/layout/LinkPane.js \
	js/dijit/layout/SplitContainer.js \
	js/dijit/layout/AccordionPane.js \
	js/dijit/layout/ScrollingTabController.js \
	js/dijit/layout/StackContainer.js \
	js/dijit/layout/ContentPane.js \
	js/dijit/layout/AccordionContainer.js \
	js/dijit/layout/BorderContainer.js \
	js/dijit/layout/StackController.js \
	js/dijit/_base.js \
	js/dijit/robot.js \
	js/dijit/ToolbarSeparator.js \
	js/dijit/ColorPalette.js \
	js/dijit/Tooltip.js \
	js/dijit/resources/_modules.js \
	js/dijit/_PaletteMixin.js \
	js/dijit/dijit.js.uncompressed.js \
	js/dijit/Tree.js \
	js/dijit/_Container.js \
	js/dijit/nls/sv/common.js \
	js/dijit/nls/sv/loading.js \
	js/dijit/nls/zh-tw/common.js \
	js/dijit/nls/zh-tw/loading.js \
	js/dijit/nls/cs/common.js \
	js/dijit/nls/cs/loading.js \
	js/dijit/nls/zh/common.js \
	js/dijit/nls/zh/loading.js \
	js/dijit/nls/ja/common.js \
	js/dijit/nls/ja/loading.js \
	js/dijit/nls/he/common.js \
	js/dijit/nls/he/loading.js \
	js/dijit/nls/it/common.js \
	js/dijit/nls/it/loading.js \
	js/dijit/nls/nb/common.js \
	js/dijit/nls/nb/loading.js \
	js/dijit/nls/el/common.js \
	js/dijit/nls/el/loading.js \
	js/dijit/nls/nl/common.js \
	js/dijit/nls/nl/loading.js \
	js/dijit/nls/da/common.js \
	js/dijit/nls/da/loading.js \
	js/dijit/nls/sl/common.js \
	js/dijit/nls/sl/loading.js \
	js/dijit/nls/ca/common.js \
	js/dijit/nls/ca/loading.js \
	js/dijit/nls/de/common.js \
	js/dijit/nls/de/loading.js \
	js/dijit/nls/ar/common.js \
	js/dijit/nls/ar/loading.js \
	js/dijit/nls/ru/common.js \
	js/dijit/nls/ru/loading.js \
	js/dijit/nls/es/common.js \
	js/dijit/nls/es/loading.js \
	js/dijit/nls/fr/common.js \
	js/dijit/nls/fr/loading.js \
	js/dijit/nls/pt-pt/common.js \
	js/dijit/nls/pt-pt/loading.js \
	js/dijit/nls/ro/common.js \
	js/dijit/nls/ro/loading.js \
	js/dijit/nls/common.js \
	js/dijit/nls/ko/common.js \
	js/dijit/nls/ko/loading.js \
	js/dijit/nls/sk/common.js \
	js/dijit/nls/sk/loading.js \
	js/dijit/nls/th/common.js \
	js/dijit/nls/th/loading.js \
	js/dijit/nls/kk/common.js \
	js/dijit/nls/kk/loading.js \
	js/dijit/nls/hu/common.js \
	js/dijit/nls/hu/loading.js \
	js/dijit/nls/tr/common.js \
	js/dijit/nls/tr/loading.js \
	js/dijit/nls/pl/common.js \
	js/dijit/nls/pl/loading.js \
	js/dijit/nls/loading.js \
	js/dijit/nls/pt/common.js \
	js/dijit/nls/pt/loading.js \
	js/dijit/nls/fi/common.js \
	js/dijit/nls/fi/loading.js \
	js/dijit/dijit-all.js.uncompressed.js \
	js/dijit/dijit.js \
	js/dijit/MenuItem.js \
	js/dijit/icons/commonIcons.css \
	js/dijit/icons/images/loadingAnimation_rtl.gif \
	js/dijit/icons/images/commonIconsObjActEnabled8bit.png \
	js/dijit/icons/images/commonIconsObjActEnabled_rtl.png \
	js/dijit/icons/images/editorIconsEnabled_rtl.png \
	js/dijit/icons/images/editorIconsDisabled_rtl.png \
	js/dijit/icons/images/commonIconsObjActDisabled.png \
	js/dijit/icons/images/commonIconsObjActDisabled_rtl.png \
	js/dijit/icons/images/commonIconsObjActEnabled.png \
	js/dijit/icons/images/commonIconsObjActEnabled8bit_rtl.png \
	js/dijit/icons/images/editorIconsEnabled.png \
	js/dijit/icons/images/editorIconsDisabled.png \
	js/dijit/icons/commonIcons_rtl.css \
	js/dijit/icons/editorIcons.css \
	js/dijit/icons/editorIcons_rtl.css \
	js/dijit/Toolbar.js \
	js/dijit/InlineEditBox.js \
	js/dijit/MenuSeparator.js \
	js/dijit/_Calendar.js \
	js/dijit/_base/manager.js \
	js/dijit/_base/window.js \
	js/dijit/_base/scroll.js \
	js/dijit/_base/wai.js \
	js/dijit/_base/sniff.js \
	js/dijit/_base/place.js \
	js/dijit/_base/typematic.js \
	js/dijit/_base/popup.js \
	js/dijit/_base/focus.js \
	js/dijit/_Widget.js \
	js/dijit/MenuBarItem.js \
	js/dijit/PopupMenuBarItem.js \
	js/dijit/TooltipDialog.js \
	js/dijit/MenuBar.js \
	js/dijit/_editor/html.js \
	js/dijit/_editor/RichText.js \
	js/dijit/_editor/_Plugin.js \
	js/dijit/_editor/range.js \
	js/dijit/_editor/nls/commands.js \
	js/dijit/_editor/nls/sv/commands.js \
	js/dijit/_editor/nls/sv/LinkDialog.js \
	js/dijit/_editor/nls/sv/FontChoice.js \
	js/dijit/_editor/nls/zh-tw/commands.js \
	js/dijit/_editor/nls/zh-tw/LinkDialog.js \
	js/dijit/_editor/nls/zh-tw/FontChoice.js \
	js/dijit/_editor/nls/cs/commands.js \
	js/dijit/_editor/nls/cs/LinkDialog.js \
	js/dijit/_editor/nls/cs/FontChoice.js \
	js/dijit/_editor/nls/zh/commands.js \
	js/dijit/_editor/nls/zh/LinkDialog.js \
	js/dijit/_editor/nls/zh/FontChoice.js \
	js/dijit/_editor/nls/LinkDialog.js \
	js/dijit/_editor/nls/ja/commands.js \
	js/dijit/_editor/nls/ja/LinkDialog.js \
	js/dijit/_editor/nls/ja/FontChoice.js \
	js/dijit/_editor/nls/he/commands.js \
	js/dijit/_editor/nls/he/LinkDialog.js \
	js/dijit/_editor/nls/he/FontChoice.js \
	js/dijit/_editor/nls/it/commands.js \
	js/dijit/_editor/nls/it/LinkDialog.js \
	js/dijit/_editor/nls/it/FontChoice.js \
	js/dijit/_editor/nls/nb/commands.js \
	js/dijit/_editor/nls/nb/LinkDialog.js \
	js/dijit/_editor/nls/nb/FontChoice.js \
	js/dijit/_editor/nls/el/commands.js \
	js/dijit/_editor/nls/el/LinkDialog.js \
	js/dijit/_editor/nls/el/FontChoice.js \
	js/dijit/_editor/nls/nl/commands.js \
	js/dijit/_editor/nls/nl/LinkDialog.js \
	js/dijit/_editor/nls/nl/FontChoice.js \
	js/dijit/_editor/nls/da/commands.js \
	js/dijit/_editor/nls/da/LinkDialog.js \
	js/dijit/_editor/nls/da/FontChoice.js \
	js/dijit/_editor/nls/sl/commands.js \
	js/dijit/_editor/nls/sl/LinkDialog.js \
	js/dijit/_editor/nls/sl/FontChoice.js \
	js/dijit/_editor/nls/ca/commands.js \
	js/dijit/_editor/nls/ca/LinkDialog.js \
	js/dijit/_editor/nls/ca/FontChoice.js \
	js/dijit/_editor/nls/de/commands.js \
	js/dijit/_editor/nls/de/LinkDialog.js \
	js/dijit/_editor/nls/de/FontChoice.js \
	js/dijit/_editor/nls/ar/commands.js \
	js/dijit/_editor/nls/ar/LinkDialog.js \
	js/dijit/_editor/nls/ar/FontChoice.js \
	js/dijit/_editor/nls/ru/commands.js \
	js/dijit/_editor/nls/ru/LinkDialog.js \
	js/dijit/_editor/nls/ru/FontChoice.js \
	js/dijit/_editor/nls/es/commands.js \
	js/dijit/_editor/nls/es/LinkDialog.js \
	js/dijit/_editor/nls/es/FontChoice.js \
	js/dijit/_editor/nls/fr/commands.js \
	js/dijit/_editor/nls/fr/LinkDialog.js \
	js/dijit/_editor/nls/fr/FontChoice.js \
	js/dijit/_editor/nls/pt-pt/commands.js \
	js/dijit/_editor/nls/pt-pt/LinkDialog.js \
	js/dijit/_editor/nls/pt-pt/FontChoice.js \
	js/dijit/_editor/nls/ro/commands.js \
	js/dijit/_editor/nls/ro/LinkDialog.js \
	js/dijit/_editor/nls/ro/FontChoice.js \
	js/dijit/_editor/nls/ko/commands.js \
	js/dijit/_editor/nls/ko/LinkDialog.js \
	js/dijit/_editor/nls/ko/FontChoice.js \
	js/dijit/_editor/nls/sk/commands.js \
	js/dijit/_editor/nls/sk/LinkDialog.js \
	js/dijit/_editor/nls/sk/FontChoice.js \
	js/dijit/_editor/nls/FontChoice.js \
	js/dijit/_editor/nls/th/commands.js \
	js/dijit/_editor/nls/th/LinkDialog.js \
	js/dijit/_editor/nls/th/FontChoice.js \
	js/dijit/_editor/nls/kk/commands.js \
	js/dijit/_editor/nls/kk/LinkDialog.js \
	js/dijit/_editor/nls/kk/FontChoice.js \
	js/dijit/_editor/nls/hu/commands.js \
	js/dijit/_editor/nls/hu/LinkDialog.js \
	js/dijit/_editor/nls/hu/FontChoice.js \
	js/dijit/_editor/nls/tr/commands.js \
	js/dijit/_editor/nls/tr/LinkDialog.js \
	js/dijit/_editor/nls/tr/FontChoice.js \
	js/dijit/_editor/nls/pl/commands.js \
	js/dijit/_editor/nls/pl/LinkDialog.js \
	js/dijit/_editor/nls/pl/FontChoice.js \
	js/dijit/_editor/nls/pt/commands.js \
	js/dijit/_editor/nls/pt/LinkDialog.js \
	js/dijit/_editor/nls/pt/FontChoice.js \
	js/dijit/_editor/nls/fi/commands.js \
	js/dijit/_editor/nls/fi/LinkDialog.js \
	js/dijit/_editor/nls/fi/FontChoice.js \
	js/dijit/_editor/selection.js \
	js/dijit/_editor/plugins/NewPage.js \
	js/dijit/_editor/plugins/TextColor.js \
	js/dijit/_editor/plugins/LinkDialog.js \
	js/dijit/_editor/plugins/EnterKeyHandling.js \
	js/dijit/_editor/plugins/FullScreen.js \
	js/dijit/_editor/plugins/FontChoice.js \
	js/dijit/_editor/plugins/Print.js \
	js/dijit/_editor/plugins/TabIndent.js \
	js/dijit/_editor/plugins/AlwaysShowToolbar.js \
	js/dijit/_editor/plugins/ViewSource.js \
	js/dijit/_editor/plugins/ToggleDir.js \
	js/dijit/form/Slider.js \
	js/dijit/form/HorizontalRule.js \
	js/dijit/form/CurrencyTextBox.js \
	js/dijit/form/ComboButton.js \
	js/dijit/form/VerticalRule.js \
	js/dijit/form/_FormSelectWidget.js \
	js/dijit/form/Button.js \
	js/dijit/form/Form.js \
	js/dijit/form/ValidationTextBox.js \
	js/dijit/form/RangeBoundTextBox.js \
	js/dijit/form/_FormMixin.js \
	js/dijit/form/TimeTextBox.js \
	js/dijit/form/HorizontalRuleLabels.js \
	js/dijit/form/RadioButton.js \
	js/dijit/form/DateTextBox.js \
	js/dijit/form/_DateTimeTextBox.js \
	js/dijit/form/MultiSelect.js \
	js/dijit/form/_FormWidget.js \
	js/dijit/form/TextBox.js \
	js/dijit/form/SimpleTextarea.js \
	js/dijit/form/nls/sv/validate.js \
	js/dijit/form/nls/sv/ComboBox.js \
	js/dijit/form/nls/sv/Textarea.js \
	js/dijit/form/nls/zh-tw/validate.js \
	js/dijit/form/nls/zh-tw/ComboBox.js \
	js/dijit/form/nls/zh-tw/Textarea.js \
	js/dijit/form/nls/cs/validate.js \
	js/dijit/form/nls/cs/ComboBox.js \
	js/dijit/form/nls/cs/Textarea.js \
	js/dijit/form/nls/zh/validate.js \
	js/dijit/form/nls/zh/ComboBox.js \
	js/dijit/form/nls/zh/Textarea.js \
	js/dijit/form/nls/ja/validate.js \
	js/dijit/form/nls/ja/ComboBox.js \
	js/dijit/form/nls/ja/Textarea.js \
	js/dijit/form/nls/he/validate.js \
	js/dijit/form/nls/he/ComboBox.js \
	js/dijit/form/nls/he/Textarea.js \
	js/dijit/form/nls/it/validate.js \
	js/dijit/form/nls/it/ComboBox.js \
	js/dijit/form/nls/it/Textarea.js \
	js/dijit/form/nls/nb/validate.js \
	js/dijit/form/nls/nb/ComboBox.js \
	js/dijit/form/nls/nb/Textarea.js \
	js/dijit/form/nls/el/validate.js \
	js/dijit/form/nls/el/ComboBox.js \
	js/dijit/form/nls/el/Textarea.js \
	js/dijit/form/nls/nl/validate.js \
	js/dijit/form/nls/nl/ComboBox.js \
	js/dijit/form/nls/nl/Textarea.js \
	js/dijit/form/nls/da/validate.js \
	js/dijit/form/nls/da/ComboBox.js \
	js/dijit/form/nls/da/Textarea.js \
	js/dijit/form/nls/sl/validate.js \
	js/dijit/form/nls/sl/ComboBox.js \
	js/dijit/form/nls/sl/Textarea.js \
	js/dijit/form/nls/ca/validate.js \
	js/dijit/form/nls/ca/ComboBox.js \
	js/dijit/form/nls/ca/Textarea.js \
	js/dijit/form/nls/de/validate.js \
	js/dijit/form/nls/de/ComboBox.js \
	js/dijit/form/nls/de/Textarea.js \
	js/dijit/form/nls/validate.js \
	js/dijit/form/nls/ar/validate.js \
	js/dijit/form/nls/ar/ComboBox.js \
	js/dijit/form/nls/ar/Textarea.js \
	js/dijit/form/nls/ru/validate.js \
	js/dijit/form/nls/ru/ComboBox.js \
	js/dijit/form/nls/ru/Textarea.js \
	js/dijit/form/nls/es/validate.js \
	js/dijit/form/nls/es/ComboBox.js \
	js/dijit/form/nls/es/Textarea.js \
	js/dijit/form/nls/fr/validate.js \
	js/dijit/form/nls/fr/ComboBox.js \
	js/dijit/form/nls/fr/Textarea.js \
	js/dijit/form/nls/pt-pt/validate.js \
	js/dijit/form/nls/pt-pt/ComboBox.js \
	js/dijit/form/nls/pt-pt/Textarea.js \
	js/dijit/form/nls/ro/validate.js \
	js/dijit/form/nls/ro/ComboBox.js \
	js/dijit/form/nls/ro/Textarea.js \
	js/dijit/form/nls/ko/validate.js \
	js/dijit/form/nls/ko/ComboBox.js \
	js/dijit/form/nls/ko/Textarea.js \
	js/dijit/form/nls/ComboBox.js \
	js/dijit/form/nls/sk/validate.js \
	js/dijit/form/nls/sk/ComboBox.js \
	js/dijit/form/nls/sk/Textarea.js \
	js/dijit/form/nls/th/validate.js \
	js/dijit/form/nls/th/ComboBox.js \
	js/dijit/form/nls/th/Textarea.js \
	js/dijit/form/nls/Textarea.js \
	js/dijit/form/nls/kk/validate.js \
	js/dijit/form/nls/kk/ComboBox.js \
	js/dijit/form/nls/kk/Textarea.js \
	js/dijit/form/nls/hu/validate.js \
	js/dijit/form/nls/hu/ComboBox.js \
	js/dijit/form/nls/hu/Textarea.js \
	js/dijit/form/nls/tr/validate.js \
	js/dijit/form/nls/tr/ComboBox.js \
	js/dijit/form/nls/tr/Textarea.js \
	js/dijit/form/nls/pl/validate.js \
	js/dijit/form/nls/pl/ComboBox.js \
	js/dijit/form/nls/pl/Textarea.js \
	js/dijit/form/nls/pt/validate.js \
	js/dijit/form/nls/pt/ComboBox.js \
	js/dijit/form/nls/pt/Textarea.js \
	js/dijit/form/nls/fi/validate.js \
	js/dijit/form/nls/fi/ComboBox.js \
	js/dijit/form/nls/fi/Textarea.js \
	js/dijit/form/HorizontalSlider.js \
	js/dijit/form/NumberSpinner.js \
	js/dijit/form/VerticalRuleLabels.js \
	js/dijit/form/VerticalSlider.js \
	js/dijit/form/FilteringSelect.js \
	js/dijit/form/ComboBox.js \
	js/dijit/form/_Spinner.js \
	js/dijit/form/Textarea.js \
	js/dijit/form/Select.js \
	js/dijit/form/CheckBox.js \
	js/dijit/form/DropDownButton.js \
	js/dijit/form/ToggleButton.js \
	js/dijit/form/NumberTextBox.js \
	js/dijit/form/MappedTextBox.js \
	js/dijit/Calendar.js \
	js/dijit/TitlePane.js \
	js/dijit/robotx.js \
	js/dijit/CheckedMenuItem.js \
	js/dijit/Dialog.js \
	js/dijit/_tree/dndSource.js \
	js/dijit/Menu.js \
	js/dijit/_TimePicker.js \
	js/dijit/Editor.js \
	js/dijit/_Templated.js \
	js/dijit/dijit-all.js \
	js/dijit/themes/tundra/TimePicker_rtl.css \
	js/dijit/themes/tundra/Tree.css \
	js/dijit/themes/tundra/Common.css \
	js/dijit/themes/tundra/Calendar_rtl.css \
	js/dijit/themes/tundra/layout/SplitContainer.css \
	js/dijit/themes/tundra/layout/BorderContainer.css \
	js/dijit/themes/tundra/layout/AccordionContainer.css \
	js/dijit/themes/tundra/layout/TabContainer.css \
	js/dijit/themes/tundra/layout/ContentPane.css \
	js/dijit/themes/tundra/layout/TabContainer_rtl.css \
	js/dijit/themes/tundra/ColorPalette.css \
	js/dijit/themes/tundra/tundra_rtl.css \
	js/dijit/themes/tundra/Calendar.css \
	js/dijit/themes/tundra/Editor_rtl.css \
	js/dijit/themes/tundra/Menu.css \
	js/dijit/themes/tundra/ProgressBar.css \
	js/dijit/themes/tundra/Dialog.css \
	js/dijit/themes/tundra/Toolbar.css \
	js/dijit/themes/tundra/images/progressBarAnim.psd \
	js/dijit/themes/tundra/images/i_half_rtl.gif \
	js/dijit/themes/tundra/images/progressBarAnim-9.png \
	js/dijit/themes/tundra/images/progressBarAnim.gif \
	js/dijit/themes/tundra/images/tooltipConnectorUp.png \
	js/dijit/themes/tundra/images/calendarDayLabel.png \
	js/dijit/themes/tundra/images/tooltipConnectorLeft.png \
	js/dijit/themes/tundra/images/treeExpand_plus_rtl.gif \
	js/dijit/themes/tundra/images/sliderThumbFocus.gif \
	js/dijit/themes/tundra/images/treeExpand_plus.gif \
	js/dijit/themes/tundra/images/progressBarFull.png \
	js/dijit/themes/tundra/images/dojoTundraGradientBg.png \
	js/dijit/themes/tundra/images/checkmarkNoBorder.gif \
	js/dijit/themes/tundra/images/splitContainerSizerH.png \
	js/dijit/themes/tundra/images/treeExpand_mius.gif \
	js/dijit/themes/tundra/images/sliderFullVerticalFocus.png \
	js/dijit/themes/tundra/images/progressBarAnim-1.png \
	js/dijit/themes/tundra/images/calendarYearLabel.png \
	js/dijit/themes/tundra/images/plusButton.gif \
	js/dijit/themes/tundra/images/progressBarAnim-3.png \
	js/dijit/themes/tundra/images/sliderEmpty.png \
	js/dijit/themes/tundra/images/progressBarEmpty.png \
	js/dijit/themes/tundra/images/progressBarAnim-8.png \
	js/dijit/themes/tundra/images/menu.png \
	js/dijit/themes/tundra/images/doubleArrowDown.png \
	js/dijit/themes/tundra/images/warning.png \
	js/dijit/themes/tundra/images/noX.gif \
	js/dijit/themes/tundra/images/tabCloseHover.gif \
	js/dijit/themes/tundra/images/treeExpand_minus.gif \
	js/dijit/themes/tundra/images/progressBarAnim-6.png \
	js/dijit/themes/tundra/images/sliderFullVertical.png \
	js/dijit/themes/tundra/images/i_half.gif \
	js/dijit/themes/tundra/images/checkmarkNoBorder.png \
	js/dijit/themes/tundra/images/radioButtonEnabled.png \
	js/dijit/themes/tundra/images/accordionItemActive.gif \
	js/dijit/themes/tundra/images/spriteArrows.gif \
	js/dijit/themes/tundra/images/smallArrowUp.png \
	js/dijit/themes/tundra/images/splitContainerSizerH-thumb.png \
	js/dijit/themes/tundra/images/tooltipConnectorRight.png \
	js/dijit/themes/tundra/images/treeExpand_minus_rtl.gif \
	js/dijit/themes/tundra/images/titleBar.png \
	js/dijit/themes/tundra/images/sliderThumb.png \
	js/dijit/themes/tundra/images/buttonHover.png \
	js/dijit/themes/tundra/images/preciseSliderThumb.gif \
	js/dijit/themes/tundra/images/comboArrowDown.gif \
	js/dijit/themes/tundra/images/preciseSliderThumb.png \
	js/dijit/themes/tundra/images/dndCopy.png \
	js/dijit/themes/tundra/images/circleIcon.gif \
	js/dijit/themes/tundra/images/buttonActive.png \
	js/dijit/themes/tundra/images/treeHover.png \
	js/dijit/themes/tundra/images/checkmark.png \
	js/dijit/themes/tundra/images/dndMove.png \
	js/dijit/themes/tundra/images/minusButton.gif \
	js/dijit/themes/tundra/images/sliderFullFocus.png \
	js/dijit/themes/tundra/images/popupMenuBg.gif \
	js/dijit/themes/tundra/images/sliderThumbFocus.png \
	js/dijit/themes/tundra/images/tabCloseHover.png \
	js/dijit/themes/tundra/images/radioButtonActiveHover.png \
	js/dijit/themes/tundra/images/radioButtonDisabled.png \
	js/dijit/themes/tundra/images/i.gif \
	js/dijit/themes/tundra/images/dijitProgressBarAnim.psd \
	js/dijit/themes/tundra/images/tooltipConnectorDown.gif \
	js/dijit/themes/tundra/images/validationInputBg.gif \
	js/dijit/themes/tundra/images/smallArrowDown.png \
	js/dijit/themes/tundra/images/tabClose.gif \
	js/dijit/themes/tundra/images/radioButtonActive.png \
	js/dijit/themes/tundra/images/loading.gif \
	js/dijit/themes/tundra/images/progressBarAnim-7.png \
	js/dijit/themes/tundra/images/treeExpand_leaf_rtl.gif \
	js/dijit/themes/tundra/images/tooltipConnectorRight.gif \
	js/dijit/themes/tundra/images/no.gif \
	js/dijit/themes/tundra/images/radioButtonActiveDisabled.png \
	js/dijit/themes/tundra/images/circleIcon.png \
	js/dijit/themes/tundra/images/sliderFull.png \
	js/dijit/themes/tundra/images/buttonEnabled.png \
	js/dijit/themes/tundra/images/validationInputBg.png \
	js/dijit/themes/tundra/images/progressBarAnim-2.png \
	js/dijit/themes/tundra/images/tooltipConnectorUp.gif \
	js/dijit/themes/tundra/images/spriteRoundedIconsSmall.gif \
	js/dijit/themes/tundra/images/tabDisabled.png \
	js/dijit/themes/tundra/images/tabClose.png \
	js/dijit/themes/tundra/images/i_rtl.gif \
	js/dijit/themes/tundra/images/progressBarAnim-4.png \
	js/dijit/themes/tundra/images/folderOpened.gif \
	js/dijit/themes/tundra/images/dndNoCopy.png \
	js/dijit/themes/tundra/images/spriteArrows.png \
	js/dijit/themes/tundra/images/checkmark.gif \
	js/dijit/themes/tundra/images/dndNoMove.png \
	js/dijit/themes/tundra/images/dijitProgressBarAnim.gif \
	js/dijit/themes/tundra/images/tabActive.png \
	js/dijit/themes/tundra/images/doubleArrowUp.png \
	js/dijit/themes/tundra/images/tabEnabled.png \
	js/dijit/themes/tundra/images/buttonDisabled.png \
	js/dijit/themes/tundra/images/tabHover.png \
	js/dijit/themes/tundra/images/preciseSliderThumbFocus.png \
	js/dijit/themes/tundra/images/calendarMonthLabel.png \
	js/dijit/themes/tundra/images/tooltipConnectorDown.png \
	js/dijit/themes/tundra/images/leaf.gif \
	js/dijit/themes/tundra/images/titleBarBg.gif \
	js/dijit/themes/tundra/images/folderClosed.gif \
	js/dijit/themes/tundra/images/dojoTundraGradientBg.gif \
	js/dijit/themes/tundra/images/splitContainerSizerV.png \
	js/dijit/themes/tundra/images/tooltipConnectorLeft.gif \
	js/dijit/themes/tundra/images/accordionItemHover.gif \
	js/dijit/themes/tundra/images/spriteRoundedIconsSmall.png \
	js/dijit/themes/tundra/images/progressBarAnim-5.png \
	js/dijit/themes/tundra/images/splitContainerSizerV-thumb.png \
	js/dijit/themes/tundra/images/preciseSliderThumbFocus.gif \
	js/dijit/themes/tundra/images/sliderEmptyVertical.png \
	js/dijit/themes/tundra/images/tabHover.gif \
	js/dijit/themes/tundra/images/treeExpand_loading.gif \
	js/dijit/themes/tundra/images/radioButtonHover.png \
	js/dijit/themes/tundra/images/treeExpand_leaf.gif \
	js/dijit/themes/tundra/form/Slider.css \
	js/dijit/themes/tundra/form/Common.css \
	js/dijit/themes/tundra/form/Checkbox.css \
	js/dijit/themes/tundra/form/Button.css \
	js/dijit/themes/tundra/form/RadioButton.css \
	js/dijit/themes/tundra/form/Select.css \
	js/dijit/themes/tundra/form/Slider_rtl.css \
	js/dijit/themes/tundra/TimePicker.css \
	js/dijit/themes/tundra/tundra.css \
	js/dijit/themes/tundra/Dialog_rtl.css \
	js/dijit/themes/tundra/TitlePane.css \
	js/dijit/themes/tundra/Tree_rtl.css \
	js/dijit/themes/tundra/Editor.css \
	js/dijit/themes/tundra/TitlePane_rtl.css \
	js/dijit/themes/tundra/Menu_rtl.css \
	js/dijit/themes/dijit.css \
	js/dijit/themes/dijit_rtl.css \
	js/dijit/themes/a11y/colors3x4-rtl.png \
	js/dijit/themes/a11y/colors7x10-rtl.png \
	js/dijit/themes/a11y/colors7x10.png \
	js/dijit/themes/a11y/colors3x4.png \
	js/dijit/themes/a11y/indeterminate_progress.gif \
	js/dijit/themes/a11y/README.txt \
	js/dijit/tree/_dndSelector.js \
	js/dijit/tree/ForestStoreModel.js \
	js/dijit/tree/model.js \
	js/dijit/tree/TreeStoreModel.js \
	js/dijit/tree/_dndContainer.js \
	js/dijit/tree/dndSource.js \
	js/dijit/Declaration.js \
	js/dijit/_DialogMixin.js \
	js/dijit/ProgressBar.js \
	js/dijit/LICENSE \
	js/dijit/PopupMenuItem.js \
	js/dijit/_Contained.js \
	js/dijit/_KeyNavContainer.js \
	js/prototype.js \
	js/commons.js \
	js/public.js \
	js/vhffs/nls/fr/prompt.js \
	js/vhffs/nls/prompt.js \
	js/vhffs/panel/user/prefs.js \
	js/vhffs/Menu.js \
	js/vhffs/Common.js \
	js/vhffs/anonymous/login.js \
	js/vhffs/anonymous/subscribe.js \
	js/tooltip.js

if INSTALL_PANEL
SUBDIRS = templates

paneljsdir= @PANELDIR@
nobase_dist_paneljs_DATA = $(javascripts)

paneldir = @PANELDIR@
nobase_dist_panel_DATA = favicon.ico
nobase_dist_panel_SCRIPTS = index.pl

# Define the substitution we need to point perl script at correct location
do_sed = $(SED) --in-place \
	-e 's,%PERL%,$(PERL),g' \
	-e 's,'%VHFFS_LIB_DIR%',$(APIDIR),g'

# Because automake, exec-hook is executed before install-scripts
# so install-data is after. Here we use a data-hook
install-data-hook :
	for f in $(nobase_dist_panel_SCRIPTS) ; do \
		$(do_sed) $(DESTDIR)$(paneldir)/$$f; \
	done

endif # Install panel

if INSTALL_PUBLIC
publicjsdir = @PUBLICDIR@
nobase_dist_publicjs_DATA = $(javascripts)
endif


