EXTRA_DIST = \
	lighttpd/mod_partialcontentabuse.c \
	lighttpd/README \
	lighttpd/lighttpd-1.4.28-mod_partialcontentabuse.patch \
	lighttpd/lighttpd-1.4.28-mod_partialcontentabuse-debian-sid.patch \
	lighttpd/10-partialcontentabuse.conf \
	pureftpd/pure-ftpd-1.0.36-estpandpassive.patch \
	pureftpd/pure-ftpd-1.0.36-customerproof-tf.patch \
	pureftpd/pure-ftpd-1.0.36-altlog-syslog.patch \
	suphp/10_TuxFamily-suphp-0.7.1-3-directorygroupcheck.dpatch \
	suphp/13_TuxFamily-suphp-0.7.1-3-free-bucket-in-discard-output.dpatch \
	suphp/11_TuxFamily-suphp-0.7.1-3-limits.dpatch \
	suphp/12_TuxFamily-suphp-0.7.1-3-add-targetmode-execute.dpatch \
	phppgadmin/phppgadmin_5.0.2_tuxfamily.patch \
	phppgadmin/phppgadmin_4.2.3_tuxfamily.patch \
	mod-vhost-hash-alias/mod-vhost-hash-alias-context-document-root.patch \
	tfsyscall/tfsyscall-0.1.0-2.6.24.4.patch \
	tfsyscall/tfsyscall-0.2.2-2.6.32.41.patch \
	tfsyscall/tfsyscall-0.2.0-2.6.29.5.patch \
	tfsyscall/tfsyscall-0.2.0-2.6.33.2.patch \
	tfsyscall/tfsyscall-0.2.2-2.6.36.1.patch \
	tfsyscall/tfsyscall-0.2.2-3.2.14.patch \
	tfsyscall/tfsyscall-0.2.1-2.6.33.2.patch \
	tfsyscall/tfsyscall-0.2.2-2.6.33.2.patch \
	tfsyscall/tfsyscall-0.2.2-2.6.35.8.patch \
	tfsyscall/tfsyscall-0.1.1-2.6.23.16.patch \
	tfsyscall/tfsyscall-0.2.0-2.6.28.9.patch \
	tfsyscall/tfsyscall-0.1.1-2.6.25.11.patch \
	tfsyscall/tfsyscall-0.2.2-3.2.45.patch \
	tfsyscall/tfsyscall-0.1.1-2.6.28.9.patch \
	tfsyscall/tfsyscall-0.2.2-2.6.39.patch \
	mysql/201_mysql-5.5-5.5.40-disable-tests.dpatch \
	mysql/200_mysql-5.1-5.1.73-username-length.dpatch \
	mysql/200_mysql-5.5-5.5.40-username-length.dpatch
