paneltemplatesdir = @TEMPLATESDIR@/panel
nobase_dist_paneltemplates_DATA = \
	acl/form.tt \
	acl/view.tt \
	admin/broadcast/create.tt \
	admin/broadcast/list.tt \
	admin/broadcast/view.tt \
	admin/group/list.tt \
	admin/index.tt \
	admin/misc/list.tt \
	admin/misc/search.tt \
	admin/misc/stats.tt \
	admin/misc/su.tt \
	admin/moderation/index.tt \
	admin/object/edit.tt \
	admin/object/list.tt \
	admin/tag/category/create.tt \
	admin/tag/category/edit.tt \
	admin/tag/category/list.tt \
	admin/tag/create.tt \
	admin/tag/edit.tt \
	admin/tag/list.tt \
	admin/tag/request/details.tt \
	admin/tag/request/list.tt \
	admin/user/list.tt \
	anonymous/account_created.tt \
	anonymous/login.tt \
	anonymous/lost-password.tt \
	anonymous/lost-password-ack.tt \
	anonymous/subscribe.tt \
	bazaar/create.tt \
	cron/create.tt \
	cron/prefs.tt \
	cvs/create.tt \
	database/prefs.tt \
	dns/create.tt \
	dns/prefs.tt \
	git/create.tt \
	group/create.tt \
	group/index.tt \
	group/info.tt \
	group/prefs.tt \
	group/tags.tt \
	layouts/anonymous.tt \
	layouts/panel.tt \
	layouts/footer.tt \
	mail/create.tt \
	mail/prefs.tt \
	mailinglist/create.tt \
	mailinglist/prefs.tt \
	menu/admin.tt \
	menu/context.tt \
	menu/group.tt \
	menu/moderator.tt \
	misc/alert.tt \
	misc/closed.tt \
	misc/errors.tt \
	misc/header.tt \
	misc/history.tt \
	misc/infos.tt \
	misc/languages.tt \
	misc/message.tt \
	misc/service-index.tt \
	mercurial/create.tt \
	mysql/create.tt \
	object/delete.tt \
	object/resubmit.tt \
	pgsql/create.tt \
	repository/create.tt \
	repository/prefs.tt \
	scm/prefs.tt \
	svn/create.tt \
	user/prefs.tt \
	web/create.tt \
	web/prefs.tt
